| Bug #39549 | Incorrect handled resource shortage of TC::scanfragreq causing node failure | ||
|---|---|---|---|
| Submitted: | 19 Sep 2008 23:34 | Modified: | 20 Sep 2008 14:31 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | * | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[19 Sep 2008 23:34]
Jonas Oreland
[19 Sep 2008 23:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/54376 2669 Jonas Oreland 2008-09-19 ndb - bug#39549 - incorrectly handled resource shortage in TC::scanfragrec
[20 Sep 2008 0:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/54381 2669 Jonas Oreland 2008-09-19 ndb - bug#39549 - incorrectly handled resource shortage in TC::scanfragrec
[20 Sep 2008 0:16]
Jonas Oreland
pushed to 62 63 and 64
[20 Sep 2008 14:31]
Jon Stephens
Documented in the NDB 6.2.16 and 6.3.18 changelogs as follows:
Setting a low value of MaxNoOfLocalScans (< 100) and performing a
large number of (certain) scans could cause the Transaction Coordinator
to run out of scan fragment records, and then crash. Now when this
resource is exhausted, the cluster returns Error 291 (Out of scanfrag
records in TC (increase MaxNoOfLocalScans)) instead.
[25 Sep 2008 12:57]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/54511 2671 Jonas Oreland 2008-09-25 ndb - atrt fix replication in 6.0 allow configurations wo/ cluster
[13 Dec 2008 0:28]
Bugs System
Pushed into 6.0.7-alpha (revid:jonas@mysql.com-20080919214900-cjrhehof2t2pjsnf) (version source revid:jonas@mysql.com-20080925105539-wd6gbofp5alv9j93) (pib:5)
